--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
 <link href = "https://fonts.googleapis.com/css2? family = Josefin + Sans: wght @ 200; 300; 400; 700 & display = swap "rel =" stylesheet ">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=Josefin+Sans:wght@200;300;400;700&display=swap" rel="stylesheet">
+
+<link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon_package_v0.16/favicon-16x16.png">
+<link rel="manifest" href="./favicon_package_v0.16/site.webmanifest">
+<link rel="mask-icon" href="./favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
+<meta property="og:description" content=" The best five-star hotel for any kind of vacation">
+<meta property="og:image:width" content="1337">
+<meta property="og:image:height" content="700">
+<meta property="og:title" content="BHROMAON">
+<meta property="og:url" content="https://vitaliyachayka.github.io/exam/">
+<meta property="og:image" content="https://vitaliyachayka.github.io/exam/og-image.jpg">
 <title>Bhromaon</title>
+<meta name="description" content="The best five-star hotel for any kind of vacation"> 
 </head>
 <body>
     <section class="main">
