--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
 
         <header class="header">
-            <div class="header__container container">
+            <div class="header__container">
                 <div class="header__block_logo">
                     <p class="header__logo">Bhromaon</p>
                 </div>
@@ -67,14 +67,13 @@
                     <li class="nav__item"><a href="#hotel" class="nav__link" title="about">What We Do</a></li>
                     <li class="nav__item"><a href="#view" class="nav__link" title="team">Travel With Us</a></li>
                     <li class="nav__item"><a href="#footer" class="nav__link" title="booking">Contact Us</a></li>
-               
                 </ul>
+                <!--<a href="#" class="close">✖</a>-->
                 <form action="" class="form__burger">
                 <input id="burger" type="checkbox" class="burger">
                 <label for="burger" class="burger__label">menu</label>
-                <span></span>
                 </form>
-                <!-- <button class="burger">menu</button>-->
+
             </nav>
             </div>
         </div>
