--- a/index.html
+++ b/index.html
@@ -1,181 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-   <link rel="stylesheet" href="./fonts/icomoon/style.css">
-   <link rel="stylesheet" href="./fonts/icomoon1/style.css">
-   <link rel="stylesheet" href="./fonts/icomoon2/style.css">
-   <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-   <link rel = "preconnect" href = "https://fonts.gstatic.com">
-<link href = "https://fonts.googleapis.com/css2? family = Josefin + Sans: wght @ 200; 300; 400; 700 & display = swap "rel =" stylesheet ">
+    <link rel="stylesheet" href="./fonts/icomoon/style.css">
+    <link rel="stylesheet" href="./fonts/icomoon1/style.css">
+    <link rel="stylesheet" href="./fonts/icomoon2/style.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=Josefin+Sans:wght@200;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2? family = Josefin + Sans: wght @ 200; 300; 400; 700 & display = swap "
+        rel=" stylesheet ">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=Josefin+Sans:wght@200;300;400;700&display=swap"
+        rel="stylesheet">
 
-<link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon_package_v0.16/favicon-16x16.png">
-<link rel="manifest" href="./favicon_package_v0.16/site.webmanifest">
-<link rel="mask-icon" href="./favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="./favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
-<meta property="og:description" content=" The best five-star hotel for any kind of vacation">
-<meta property="og:image:width" content="1337">
-<meta property="og:image:height" content="700">
-<meta property="og:title" content="BHROMAON">
-<meta property="og:url" content="https://vitaliyachayka.github.io/exam/">
-<meta property="og:image" content="https://vitaliyachayka.github.io/exam/og-image.jpg">
-<title>Bhromaon</title>
-<meta name="description" content="The best five-star hotel for any kind of vacation"> 
+    <meta property="og:description" content=" The best five-star hotel for any kind of vacation">
+    <meta property="og:image:width" content="1337">
+    <meta property="og:image:height" content="700">
+    <meta property="og:title" content="BHROMAON">
+    <meta property="og:url" content="https://vitaliyachayka.github.io/exam/">
+    <meta property="og:image" content="https://vitaliyachayka.github.io/exam/og-image.jpg">
+    <title>Bhromaon</title>
+    <meta name="description" content="The best five-star hotel for any kind of vacation">
 </head>
+
 <body>
     <section class="main">
 
-      <section class="HomePage" id="HomePage">
-        <div class="container container-HomePage">
-            <h1 class="container__title_h1 item__title">Bhromaon</h1>
-            <h3 class="container__title_h3 item__title">Safe Travel Anywhere</h3>
-            <form action="#" method="post" class="form__search">
-                <div class="wraper__search">
-                <input type="search" name="input" placeholder="Search Your Travel Destination" class="input__search">
-                <button  type="submit" class="button__search"><span class="button__text"> Search</span><span class="icon-search"></span></button>
-            </form>
-        </div>
-            
+        <section class="HomePage" id="HomePage">
+            <div class="container container-HomePage">
+                <h1 class="container__title_h1 item__title">Bhromaon</h1>
+                <h3 class="container__title_h3 item__title">Safe Travel Anywhere</h3>
+                <form action="#" method="post" class="form__search">
+                    <div class="wraper__search">
+                        <input type="search" name="input" placeholder="Search Your Travel Destination"
+                            class="input__search">
+                        <button type="submit" class="button__search"><span class="button__text"> Search</span><span
+                                class="icon-search"></span></button>
+                </form>
+            </div>
+
             <div class="container__scroll">
                 <p class="scroll__text">Scroll Down</p>
                 <a href="#clients" class="scroll__linkMore">
-                <span class="icon-chevron-thin-down"></span></a>
+                    <span class="icon-chevron-thin-down"></span></a>
             </div>
-        </div>
+            </div>
         </section>
 
+
         <header class="header">
-            <div class="header__container">
-                <div class="header__block_logo">
-                    <p class="header__logo">Bhromaon</p>
-                </div>
+            <div class="container">
+                <div class="header__wrap">
 
-                <div class="header__block_nav">
-                         <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#clients" class="nav__link" title="home">Who We Are</a></li>
-                    <li class="nav__item"><a href="#hotel" class="nav__link" title="about">What We Do</a></li>
-                    <li class="nav__item"><a href="#view" class="nav__link" title="team">Travel With Us</a></li>
-                    <li class="nav__item"><a href="#footer" class="nav__link" title="booking">Contact Us</a></li>
-                </ul>
-                <!--<a href="#" class="close">✖</a>-->
-                <form action="" class="form__burger">
-                <input id="burger" type="checkbox" class="burger">
-                <label for="burger" class="burger__label">menu</label>
-                </form>
+                    <div class="header__block">
+                        <p class="header__logo">Bhromaon</p>
+                    </div>
 
-            </nav>
-            </div>
-        </div>
-		</header>
+                    <nav class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item"><a href="#clients" class="nav__link" title="home">Who We Are</a></li>
+                            <li class="nav__item"><a href="#hotel" class="nav__link" title="about">What We Do</a></li>
+                            <li class="nav__item"><a href="#view" class="nav__link" title="team">Travel With Us</a></li>
+                            <li> <button class="close-btn">close</button></li>
+                        </ul>
+                        <button class="burger">menu</button>
+                    </nav>
 
-
-    <section class="clients" id="clients">
-        <div class="container container__clients">
-            <div class="client__block block">
-                <h2 class="client__block_h2 title">Why Choose Us</h2>
-                <p class="client__block_text item_text">Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
-                <p class="client__block_text item_text">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by</p>
-                <form action="#" class="form__button">
-                    <button class="button_universal">Explore Places</button>
-                </form>
-            </div>
-            <div class="image__block block">
-                <div class="image__block_top">
-                    <img src="./image/image-first.jpg" alt="image_landscape" srcset="./image/image-first-md.jpg 980w, ./image/image-first-sm.jpg 780w">
-                </div>
-                <div class="image__block_bottom">
-                    <img src="./image/image-second.jpg" alt="image_landscape" srcset="./image/image-second-md.jpg 980w, ./image/image-second-sm.jpg 780w">>
                 </div>
             </div>
-        </div>
-         </section>
+        </header>
 
-         <section class="booking" id="booking">
+
+        <section class="clients" id="clients">
+            <div class="container container__clients">
+                <div class="client__block block">
+                    <h2 class="client__block_h2 title">Why Choose Us</h2>
+                    <p class="client__block_text item_text">Tion and dislike men who are so beguiled and demoralized by
+                        desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
+                    </p>
+                    <p class="client__block_text item_text">Ddislike men who are so beguiled and demoralized by the
+                        charms of pleasure of the moment, so blinded by</p>
+                    <form action="#" class="form__button">
+                        <button class="button_universal">Explore Places</button>
+                    </form>
+                </div>
+                <div class="image__block block">
+                    <div class="image__block_top">
+                        <img src="./image/image-first.jpg" alt="image_landscape"
+                            srcset="./image/image-first-md.jpg 980w">
+                    </div>
+                    <div class="image__block_bottom">
+                        <img src="./image/image-second.jpg" alt="image_landscape"
+                            srcset="./image/image-second-md.jpg 980w">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="booking" id="booking">
             <div class="container booking__container">
 
-            <div class="icon__item_svg">
-                <svg class="icon_search" xmlns="http://www.w3.org/2000/svg" width="97"   viewBox="0 0 30 30"><use xlink:href="sprite.svg#search"></use></svg>
-                <p class="icon_text">Search Places</p>
+                <div class="icon__item_svg">
+                    <svg class="icon_search" xmlns="http://www.w3.org/2000/svg" width="97" viewBox="0 0 30 30">
+                        <use xlink:href="sprite.svg#search"></use>
+                    </svg>
+                    <p class="icon_text">Search Places</p>
+                </div>
+
+                <div class="icon__item_svg ">
+                    <svg class="icon_select" xmlns="http://www.w3.org/2000/svg" width="97" viewBox="0 0 30 30">
+                        <use xlink:href="sprite.svg#check"></use>
+                    </svg>
+                    <p class="icon_text">Select Places</p>
+                </div>
+
+                <div class="icon__item_svg ">
+                    <svg class="icon_like" xmlns="http://www.w3.org/2000/svg" width="97" viewBox="0 0 30 30">
+                        <use xlink:href="sprite.svg#like"></use>
+                    </svg>
+                    <p class="icon_text">Book & Enjoy</p>
+                </div>
             </div>
+        </section>
 
-            <div class="icon__item_svg ">
-                <svg class="icon_select" xmlns="http://www.w3.org/2000/svg" width="97" viewBox="0 0 30 30"><use xlink:href="sprite.svg#check"></use></svg>
-                <p class="icon_text">Select Places</p>
+        <sestion class="hotel" id="hotel">
+            <div class="container hotel__container">
+                <div class="hotel__box">
+                    <h5 class="box__title_h4 title_h4_first">Spain</h5>
+                    <h4 class="box__title_h4 title_h4_second">Grand Spain Madrid</h4>
+                    <p class="box__text ">But I must explain to you how all this mistaken idea of account to denouncing
+                        pleasure and praising pain was account born and I account will give you a complete</p>
+                    <form action="#" class="form__button">
+                        <button class="button_universal">Explore Places</button>
+                    </form>
+                </div>
             </div>
+        </sestion>
 
-               <div class="icon__item_svg ">
-                <svg  class="icon_like" xmlns="http://www.w3.org/2000/svg" width="97"  viewBox="0 0 30 30"><use xlink:href="sprite.svg#like"></use></svg>
-                <p class="icon_text">Book & Enjoy</p>
-               </div>
-               </div>
-            </section>
+        <section class="view" id="view">
+            <div class="container view__container">
+                <div class="hotel__box">
+                    <h5 class="box__title_h4 title_h4_first">Spain</h5>
+                    <h4 class="box__title_h4 title_h4_second">Grand Spain Madrid</h4>
+                    <p class="box__text ">But I must explain to you how all this mistaken idea of account to denouncing
+                        pleasure and praising pain was account born and I account will give you a complete</p>
+                    <form action="#" class="form__button">
+                        <button class="button_universal">Explore Places</button>
+                    </form>
+                </div>
+            </div>
+        </section>
 
-    <sestion class="hotel" id="hotel">
-        <div class="container hotel__container">
-        <div class="hotel__box">
-            <h5 class="box__title_h4 title_h4_first">Spain</h5>
-            <h4 class="box__title_h4 title_h4_second">Grand Spain Madrid</h4>
-            <p class="box__text ">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete</p>
-            <form action="#" class="form__button">
-                <button class="button_universal">Explore Places</button>
-            </form>
-        </div>
-        </div>
-    </sestion>
-  
-    <section class="view" id="view">
-        <div class="container view__container">
-        <div class="hotel__box">
-            <h5 class="box__title_h4 title_h4_first">Spain</h5>
-            <h4 class="box__title_h4 title_h4_second">Grand Spain Madrid</h4>
-            <p class="box__text ">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete</p>
-            <form action="#" class="form__button">
-                <button class="button_universal">Explore Places</button>
-            </form>
-        </div>
-        </div>
+        <section class="tourist" id="tourist">
+            <div class="container tourist__container">
+                <h2 class="tourist__block_h2 title">What Our Tourist Say</h2>
+                <div class="tourist__block_main">
+                    <div class="tourist__block_image">
+                        <img class="tourist__img" src="./image/image-third.jpg" alt="image_tourist"
+                            srcset="./image/image-third-md.jpg 980w,  ./image/image-third-sm.jpg 780w">
+                    </div>
+                    <div class="tourist__block_review block">
+                        <h4 class="box__title_h4 title_h4_second tourist__title_h4">Sam Sumon</h4>
+                        <p class="block_review-text"> But I must explain to you how all this mistaken idea of account to
+                            denouncinpleasure and praising pain But I must explain to you how all this mistaken idea of
+                            account to nai denouncing pleasure and praising pain was account born and I account will
+                            give you a complete account of the system was account born and I account will</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer-block" id="footer">
+            <h3 class="footer-block__h3">Bhromaon</h3>
+            <h5 class="footer-block__h5"> Safe Travel Anywhere</h5>
+            <div class="footer__icons">
+                <span class="icon-facebook icon__item"></span>
+                <span class="icon-twitter icon__item"></span>
+                <span class="icon-linkedin2 icon__item"></span>
+                <span class="icon-youtube icon__item"></span>
+                <span class="icon-pinterest2 "></span>
+            </div>
+        </footer>
+
     </section>
-
-    <section class="tourist" id="tourist">
-     <div class="container tourist__container">
-            <h2 class="tourist__block_h2 title">What Our  Tourist Say</h2>
-            <div class="tourist__block_main">
-            <div class="tourist__block_image">
-                    <img class="tourist__img" src="./image/image-third.jpg" alt="image_tourist" srcset="./image/image-third-md.jpg 980w,  ./image/image-third-sm.jpg 780w">
-            </div>
-            <div class="tourist__block_review block">
-                <h4 class="box__title_h4 title_h4_second tourist__title_h4">Sam Sumon</h4> 
-<p class="block_review-text">  But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will</p>
-            </div>
-            </div>
-     </div>
-    </section>
-
-   <footer class="footer-block" id="footer">
-   <h3 class="footer-block__h3">Bhromaon</h3>
-    <h5 class="footer-block__h5"> Safe Travel Anywhere</h5>
-    <div class="footer__icons">
-    <span class="icon-facebook icon__item"></span>
-    <span class="icon-twitter icon__item"></span>
-    <span class="icon-linkedin2 icon__item"></span>
-    <span class="icon-youtube icon__item"></span>
-    <span class="icon-pinterest2 "></span>   
-</div> 
-   </footer> 
-
-</section>
-  
+    <script src="./scripts.js"></script>
 </body>
-</html>
 
+</html>
